--- a/example.html
+++ b/example.html
@@ -6,12 +6,14 @@
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="format-detection" content="telephone=no" />
 
-  <title>Credit Card Validator</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+	<title>Credit Card Validator</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
 	<style type="text/css">
 		* {font-family:Arial, Verdana, sans-serif;}
 		a { font-weight:bold;color:inherit; }
@@ -34,6 +36,18 @@
 		#ccnum.error { background-color:#ffebe8;border:2px solid #dd3c10;}
 		#ccnum.valid { background-color:#e8ffec;border:2px solid #10dd28;}
 		.hidden {display:none;}
+
+
+		
+		@media (max-width: 480px) {
+			.wrapper { width:300px;}
+			#acceptedcards img { width:48px;}
+			#cchint { font-size:10px; text-decoration:none;}
+			
+		}
+		
+
+
 	</style>
 
 </head>
@@ -55,7 +69,7 @@
 		<li class="cc_jcb"><img src="1333652770_jcb.png" alt="" /></li>
 	</ul>
     <div id="main">
-		<input type="text" name="ccnum" id="ccnum" size="60" />
+		<input type="text" name="ccnum" id="ccnum" />
 		<p id="cchint">Eg: 4539534096584, 344874189088886, 5103675894917164</p>
 		<button id="validate">Validate</button>
 	</div>
