more responsive stuff for iphone

--- a/example.html
+++ b/example.html
@@ -45,6 +45,14 @@
 			#cchint { font-size:10px; text-decoration:none;}
 			
 		}
+		@media (max-width: 450px) {
+			.wrapper { width:260px;}
+			#header { font-size:0.7em;}
+			#acceptedcards img { width:40px;}
+			#ccnum { width:90%; }
+			#cchint { font-size:10px; text-decoration:none;}
+			
+		}
 		
 
 
