--- a/example.html
+++ b/example.html
@@ -18,7 +18,7 @@
 		* {font-family:Arial, Verdana, sans-serif;}
 		a { font-weight:bold;color:inherit; }
 		ul {margin:0;padding:0;}
-		.wrapper { font-size:0.7em;width:400px;margin:0 auto;padding:.4em; }
+		.wrapper { font-size:0.7em;width:400px;padding:.4em; }
 		#container { background:#f9f9f9;border:3px solid #eee;border:3px solid rgba(0,0,0,0.05);border-radius:5px; }
 		#header { background:#aaa;background:rgba(0,0,0,0.5);color:#fff; padding:0.4em;font-size:0.8em;text-align:center;border-radius:5px; }
 		.results {display:block; padding:0.4em 0;}
